--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,4 +1,4 @@
-%b-container
-  .page-content
-    %h3 My Stupid Website
-    %p Nothing useful here yet, just a placeholder.
+- provide :title, 'Home'
+.page-content
+  %h3 My Stupid Website
+  %p Nothing useful here yet, just a placeholder.
