--- a/app/assets/javascripts/components/app-navbar-right.vue.haml
+++ b/app/assets/javascripts/components/app-navbar-right.vue.haml
@@ -5,27 +5,48 @@
       mode: false
     }
     computed: {
-      modeButtonClass: ->
-        { 'fa-user': @mode, 'fa-key': !@mode }
+      idLoginBtn: -> "app-login-" + @uniqId
     }
     methods: {
       toggleMode: ->
         @mode = !@mode
+
+      logOut: ->
+        $.ajax {
+          url: $Route.logout
+          method: 'POST'
+        }
+        .done (data) =>
+          if data.success
+            location.reload()
     }
   }
 
 %template
-  %b-nav.ml-auto(is-nav-bar)
+  %b-navbar-nav.ml-auto
     %div{'v-if': 'login'}
-    %div{'v-else-if': 'mode'}
-      %b-nav-form
+      %b-input-group
+        %b-input-group-prepend(is-text)
+          Logged in:
+        %b-input-group-append
+          %b-dropdown(variant="secondary" right){':text': 'login.name'}
+            %b-dropdown-item{':href': '$Route.profile'} Profile
+            %b-dropdown-item{':href': '$Route.settings'} Settings
+            %b-dropdown-divider
+            %b-dropdown-item{'@click': 'logOut'} Log Out
+    %div{'v-else': true}
+      %b-nav-form{'v-show': 'mode'}
         %b-input-group
           %b-form-input(type="text" placeholder="Access token…")
-          %b-input-group-button
-            %b-button(href="#" variant="outline-success") Enter
-    %div{'v-else': true}
-      %b-button-group
+          %b-input-group-append
+            %b-button(variant="outline-success") Enter
+            %b-button(variant="outline-secondary"){'@click': 'toggleMode'}
+              %i.fa.fa-user
+              %span User
+      %b-button-group.ml-sm-0{'v-show': '!mode'}
+        %b-button(variant="outline-success"){':id': 'idLoginBtn'} Log In
         %b-button(href="#" variant="outline-secondary") Register
-        %b-button(href="#" variant="outline-success") Log In
-    %b-button.ml-sm-2(variant="outline-secondary"){'@click': 'toggleMode'}
-      %i.fa.fa-fw{':class': 'modeButtonClass'}
+        %b-button(variant="outline-secondary"){'@click': 'toggleMode'}
+          %i.fa.fa-key
+          %span Token
+      %app-popup-login{':target': 'idLoginBtn'}
