--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,25 +1,34 @@
 %html
   %head
-    = csrf_meta_tag
-    = favicon_link_tag
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1")
-    %title Mijyuoon's Webshite - #{yield :title}
+    = csrf_meta_tag
+    = favicon_link_tag '/favicon.ico'
     = stylesheet_link_tag 'application', media: :all
     = stylesheet_link_tag "controller/#{params[:controller]}", media: :all
     = javascript_include_tag 'application'
     = javascript_include_tag "controller/#{params[:controller]}"
+    %title Mijyuoon's Website - #{yield :title}
   %body
     #vue-app-root
-      %b-navbar(toggleable="sm" type="light" variant="light")
+      %b-navbar(toggleable="md" type="light" variant="light")
         %b-nav-toggle(target="navbar-collapse")
         %b-navbar-brand(href="#")
-          %img.navbar-logo{src: asset_path('logo.png')}
-        %b-navbar-brand(href="#") Mijyuoon's Website
+          %img.navbar-logo(src="/images/site/logo.png")
+          %span.navbar-label Mijyuoon's Website
         %b-collapse#navbar-collapse(is-nav)
-          %app-navbar-menu(active="home")
-          %app-navbar-right
-      = yield
-    = javascript_include_tag 'vuejs_init'
+          %app-navbar-menu
+          %app-navbar-right{':login': 'login'}
+      %b-container.app-content
+        .app-alerts
+          %b-alert(show){'v-for': 'alert in alerts',
+          ':variant': 'alert.type', ':dismissible': 'alert.close'}
+            %span.title {{alert.title}}
+            %span.text {{alert.text}}
+        = yield
+    - add_flash_to_frontend_data
+    = json_object_tag(@frontend_data, 'page-data')
+    :javascript
+      window.$App.initialize()
     - if params[:console]
       = console
